<resources>
    <string name="app_name">EHelp</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment2">Hello blank fragment222</string>
    <string name="title_activity_maps">Map</string>
    <string name="titleLabel">Title</string>
    <string name="aboutLabel">About</string>
    <string name="urgencyLabel">Urgency</string>
    <string name="categoryLabel">Category</string>
    <string name="latitudeLabel">Latitude</string>
    <string name="longitudeLabel">Longitude</string>
    <string name="filterLabel">Filter</string>
    <string name="filtersLabel">Filters</string>
    <string name="distanceLabel">Distance</string>
    <string name="resetLabel">Reset</string>
    <string name="cancelString">Cancel</string>
    <string name="okLabel">OK</string>
    <string name="addRequestTitle">New Help Request</string>

    <string name="titleLabel2">Title:</string>
    <string name="aboutLabel2">About:</string>
    <string name="urgencyLabel2">Urgency:</string>
    <string name="categoryLabel2">Category:</string>
    <string name="latitudeLabel2">Latitude:</string>
    <string name="longitudeLabel2">Longitude:</string>
    <string name="blank"> </string>

    <string name="btnSignIn">Sing In</string>
    <string name="btnDontHaveAcc">Dont have acc?</string>
    <string name="btnSignUp">Sign Up</string>
    <string name="btnHaveAcc">Have acc ?</string>
    <string name="btnTakePhoto">Take photo</string>

    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="settingsRightMenu">Settings</string>

    <string name="btnCancleFriendReq">Cancel friend request</string>
    <string name="btnSendFriendReq">Send friend request</string>
    <string name="btnFindUsers">Find users</string>

    <string name="btnAccept">Confirm</string>
    <string name="btnDelFr">Delete</string>
    <string name="txtFrReq">Friend requests</string>
    <string name="hintEmail">Enter email</string>
    <string name="txtFoundUsers">Found users</string>

    <string name="txtname">Name:</string>
    <string name="txtLastname">Lastname:</string>
    <string name="txtEmail">Email:</string>
    <string name="hintPass">Password</string>
    <string name="hintEmailLog">Email</string>
    <string name="hintName">First name</string>
    <string name="hintLastname">Last name</string>
    <string name="hintNumber">Number</string>
    <string name="hintUsername">Username</string>
    <string name="DontHaveAcc">Don\'t Have an Account?</string>
    <string name="AlreadyHave">Already Have an Account?</string>
    <string name="txtSignIn">Sign in</string>
    <string name="txtSignUp">Sign up</string>
    <string name="txtAddPhoto">Add photo</string>
    <string name="txtCreateAcc">Create an Account</string>
    <string name="points">Points</string>

    <string name="txtRank">Rank:</string>
    <string name="txtPoints">Points:</string>
    <string name="loading">loading...</string>
    <string name="lblRankList">Rank list</string>


    <string name="channel_name">ChanellEHelpNotification</string>
    <string name="channel_description">User,Request</string>
    <string name="btnhelp">Help</string>
    <string name="appService">App service</string>
    <string name="btnSignOut">Sign out</string>

    <string-array name="Urgency">
        <item>Urgently</item>
        <item>Mixed</item>
        <item>Not Urgently</item>
    </string-array>

    <string-array name="Category">
        <item>Medicine</item>
        <item>Food</item>
        <item>Other</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
