<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FriendFragments.UserProfileFragment">


    <TextView
        android:id="@+id/nameAddUser"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:text=""
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@id/verGuiUserP"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/horgui1" />

    <TextView
        android:id="@+id/lastnameAddUser"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:text=""
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/verGuiUserP"
        app:layout_constraintTop_toTopOf="@id/horgui1" />

    <TextView
        android:id="@+id/emailAddUser"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginBottom="33dp"
        android:text=""
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/horGuiUserP"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEmail" />

    <Button
        android:id="@+id/btnSendRequest"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/empty_profile_btn"
        android:text="@string/btnSendFriendReq"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="@id/btnCancelRequest"
        app:layout_constraintEnd_toStartOf="@+id/vergui2"
        app:layout_constraintStart_toStartOf="@+id/vergui1"
        app:layout_constraintTop_toBottomOf="@id/horGuiUserP" />

    <Button
        android:id="@+id/btnCancelRequest"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/empty_profile_btn"
        android:text="@string/btnCancleFriendReq"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/vergui2"
        app:layout_constraintStart_toStartOf="@+id/vergui1"
        app:layout_constraintTop_toBottomOf="@+id/btnSendRequest" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horGuiUserP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.500684" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/verGuiUserP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.45" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horgui1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horgui2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.37" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/txtname"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/horgui1"
        app:layout_constraintEnd_toStartOf="@+id/verGuiUserP"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/txtLastname"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/horgui1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/verGuiUserP"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/txtEmail"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/emailAddUser"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horgui3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horgui3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3
" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vergui1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vergui2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
       app:layout_constraintGuide_percent="0.8" />


</androidx.constraintlayout.widget.ConstraintLayout>