<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity.SignInActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toStartOf="@+id/guiVer2"
        app:layout_constraintStart_toStartOf="@+id/guiVer1"
        app:layout_constraintTop_toBottomOf="@+id/guiLogIn">

        <EditText
            android:id="@+id/usernameSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_email"
            android:fontFamily="@font/ubuntu_light"
            android:hint="@string/hintEmailLog"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textSize="18sp">

        </EditText>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toStartOf="@+id/guiVer2"
        app:layout_constraintStart_toStartOf="@+id/guiVer1"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/passwordSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_lock"
            android:ems="5"
            android:fontFamily="@font/ubuntu_light"
            android:hint="@string/hintPass"
            android:inputType="textPassword"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textSize="18sp">

        </EditText>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnSignIn"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/confirm_btn"
        android:fontFamily="@font/ubuntu_bold"
        android:text="@string/btnSignIn"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/guiLoginHor2"
        app:layout_constraintEnd_toStartOf="@+id/guiVer2"
        app:layout_constraintStart_toStartOf="@+id/guiVer1"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guiLogIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guiVer1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guiVer2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/ubuntu_light"
        android:text="@string/DontHaveAcc"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/guiLoginHor3"
        app:layout_constraintStart_toStartOf="@+id/guiVer1"
        app:layout_constraintTop_toBottomOf="@+id/guiLoginHor2" />

    <TextView
        android:id="@+id/txtBtnSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:fontFamily="@font/ubuntu_bold"
        android:text="@string/txtSignUp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#3897F0"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/guiLoginHor3"
        app:layout_constraintStart_toEndOf="@+id/textView17"
        app:layout_constraintTop_toBottomOf="@+id/guiLoginHor2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guiLoginHor2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guiLoginHor3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="1.0" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        style="?android:attr/borderlessButtonStyle"
        app:layout_constraintBottom_toTopOf="@+id/guiLogIn"
        app:layout_constraintEnd_toStartOf="@+id/guiVer2"
        app:layout_constraintStart_toStartOf="@+id/guiVer1"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ehelplogo"/>
</androidx.constraintlayout.widget.ConstraintLayout>